# PantheonAI

./: .gitignore  client.py  main.py  pyproject.toml  readme.md  run.py  zep_models.py.noload
app/: main.py
app/routers/: api.py
app/services/: openai.py  zep.py
app/utils/: logger.py
prompts/: 00_zeus.txt  01_zeus.txt  99_dummy.txt
resources/: cities.txt
