[tool.poetry]
name = "pantheon"
version = "0.1.0"
description = "multi-user longterm history LLM chat"
authors = ["Shahriar <mehraneftekhari99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
zep-python = "^0.31"
flask = "^2.3.2"
openai = "^0.27.8"
colorama = "^0.4.6"
gnureadline = "^8.1.2"
fastapi = "^0.98.0"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"
pydantic = "^1.10.9"
loguru = "^0.7.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
